--- a/index.html
+++ b/index.html
@@ -5,14 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+
+    <script src="public/js/index.js" defer></script>
+    <link rel="stylesheet" href="public/css/main.css">  
 </head>
 <body>
 
 
+    <header class="header">
 
-    
+        <nav class="navbar-desktop">
+            <div class="logo">
+                <img src="public/img/icons/KMT.png" alt="">
+            </div>
+            <div class="menu">
+                <ul class="menu-list">
+                    <li class="item"><a href="#" class="link">Home</a></li>
+                    <li class="item"><a href="#" class="link">About us</a></li>
+                    <li class="item"><a href="#" class="link">Service</a></li>
+                    <li class="item"><a href="#" class="link">Porfolio</a></li>
+                    <li class="item"><a href="#" class="link">Testimonials</a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <nav class="navbar-mobile">
+
+            <div class="open-close">
+                <div class="logo">
+                    <img src="public/img/icons/KMT.png" alt="">
+                </div>
+                <div class="toggle-btn" id="toggle-btn">
+                    <?xml version="1.0" ?><svg height="25px" version="1.1" viewBox="0 0 25 25" width="25px" xmlns="http://www.w3.org/2000/svg" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" xmlns:xlink="http://www.w3.org/1999/xlink"><title/><desc/><defs/><g fill="none" fill-rule="evenodd" id="TabBar-Icons" stroke="none" stroke-width="1"><g fill="#ffff" id="Hamburger-Round"><path d="M0,4 C0,2.8954305 0.889763236,2 2.00359486,2 L22.9964051,2 C24.10296,2 25,2.88772964 25,4 C25,5.1045695 24.1102368,6 22.9964051,6 L2.00359486,6 C0.897039974,6 0,5.11227036 0,4 L0,4 Z M0,12 C0,10.8954305 0.889763236,10 2.00359486,10 L22.9964051,10 C24.10296,10 25,10.8877296 25,12 C25,13.1045695 24.1102368,14 22.9964051,14 L2.00359486,14 C0.897039974,14 0,13.1122704 0,12 L0,12 Z M0,20 C0,18.8954305 0.889763236,18 2.00359486,18 L22.9964051,18 C24.10296,18 25,18.8877296 25,20 C25,21.1045695 24.1102368,22 22.9964051,22 L2.00359486,22 C0.897039974,22 0,21.1122704 0,20 L0,20 Z" id="Hamburger"/></g></g></svg>
+                </div>
+            </div>
+
+            <div class="menu">
+                <ul class="menu-listm">
+                    <li class="item"><a href="#" class="link">Home</a></li>
+                    <li class="item"><a href="#" class="link">About us</a></li>
+                    <li class="item"><a href="#" class="link">Service</a></li>
+                    <li class="item"><a href="#" class="link">Porfolio</a></li>
+                    <li class="item"><a href="#" class="link">Testimonials</a></li>
+                </ul>
+            </div>
+
+        </nav>
+
+    </header>
 
 
-    
 </body>
 </html>
