--- a/index.html
+++ b/index.html
@@ -54,6 +54,46 @@
 
     </header>
 
+    <main class="slider">
+        <div class="slider-text">
+            <h1>
+                Jehovane, esta es una pagina en desarrollo
+            </h1>
+            <p>Todos los codigos que viste, hacen que cada cosa aca sea funcional, es raro pero esos codigos hacen todo esto y esta tonteria que ves, son como 300 Lineas de codigo</p>
+            <button>Contact Us</button>
+        </div>
+    </main>
+
+    <section class="about-company">
+        <div class="img-company">
+            <div class="border-line">
+            </div>
+        </div>
+        <article class="about-info">
+            <div class="info-text">
+                <h2>About our company</h2>
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore corporis debitis magni, alias molestias sapiente voluptas tempora iste est quos quaerat aut perferendis natus at, tenetur provident inventore unde error.</p>
+            </div>
+            <div class="about-icons">
+                <div class="a-icons">
+                    <img src="public/img/icons/icon (1).webp" alt="">
+                </div>
+                <div class="a-icons">
+                    <img src="public/img/icons/icon (2).webp" alt="">
+                </div>
+                <div class="a-icons">
+                    <img src="public/img/icons/icon (3).webp" alt="">
+                </div>
+                <div class="a-icons">
+                    <img src="public/img/icons/icon (4).webp" alt="">
+                </div>
+            </div>
+            
+
+        </article>
+
+    </section>
 
 </body>
 </html>
