--- a/index.html
+++ b/index.html
@@ -100,38 +100,44 @@
 
     </section>
 
-    <section class="our-services">
+    <section class="services">
 
-        <div class="card">
-            <div class="card-img">
-                <img src="public/img/slider/home (2).webp" alt="">
-            </div>
-            <div class="card-text">
-                <h4>Lorem, ipsum dolor.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, temporibus!</p>
-                <button>Contact Us</button>
-            </div>
+        <div class="services-header">
+            <h1>Our Services</h1>
         </div>
-        <div class="card">
-            <div class="card-img">
-                <img src="public/img/slider/home (2).webp" alt="">
+
+        <section class="our-services">
+            <div class="card">
+                <div class="card-img">
+                    <img src="public/img/slider/home (2).webp" alt="">
+                </div>
+                <div class="card-text">
+                    <h4>Lorem, ipsum dolor.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, temporibus!</p>
+                    <button>Contact Us</button>
+                </div>
             </div>
-            <div class="card-text">
-                <h4>Lorem, ipsum dolor.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, temporibus!</p>
-                <button>Contact Us</button>
+            <div class="card">
+                <div class="card-img">
+                    <img src="public/img/slider/home (2).webp" alt="">
+                </div>
+                <div class="card-text">
+                    <h4>Lorem, ipsum dolor.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, temporibus!</p>
+                    <button>Contact Us</button>
+                </div>
             </div>
-        </div>
-        <div class="card">
-            <div class="card-img">
-                <img src="public/img/slider/home (2).webp" alt="">
+            <div class="card">
+                <div class="card-img">
+                    <img src="public/img/slider/home (2).webp" alt="">
+                </div>
+                <div class="card-text">
+                    <h4>Lorem, ipsum dolor.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, temporibus!</p>
+                    <button>Contact Us</button>
+                </div>
             </div>
-            <div class="card-text">
-                <h4>Lorem, ipsum dolor.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, temporibus!</p>
-                <button>Contact Us</button>
-            </div>
-        </div>
+        </section>
 
     </section>
 
@@ -175,6 +181,125 @@
 
     </section>
 
+    <!-- <section class="testimonials">
 
+        <header class="testimonials-header">
+            <h1>Testimonials</h1>
+        </header>
+
+        <section class="testimonial-grid">
+
+            <article class="testimonial">
+                <div class="testimonial-text">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit, ex autem maxime esse velit odio?</p>
+                </div>
+                <div class="testimonial-icon">
+                    <div class="icon-client">
+                        <img src="public/img/icons/client2.jpg" alt="">
+                    </div>
+                    <div class="client-name">
+                        <h2>Desmond Doss</h2>
+                        <p>Lorem, ipsum.</p>
+                    </div>
+                </div>
+            </article>
+
+        </section>
+
+    </section> -->
+
+    <section class="our-team">
+
+        <header class="our-header">
+            <h1>Our Experts</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit a omnis officia. Voluptas, tempora optio.</p>
+        </header>
+
+        <div class="our-grid">
+
+            <div class="team-card">
+
+                <div class="team-header">
+                    <h3>Colgate Dos</h3>
+                    <p>Supervisor</p>
+                </div>
+
+                <div class="team-img">
+                    <img src="public/img/team01.png" alt="">
+                </div>
+
+            </div>
+
+            <div class="team-card">
+
+                <div class="team-header">
+                    <h3>Colgate Dos</h3>
+                    <p>Supervisor</p>
+                </div>
+
+                <div class="team-img">
+                    <img src="public/img/team01.png" alt="">
+                </div>
+
+            </div>
+
+            <div class="team-card">
+
+                <div class="team-header">
+                    <h3>Colgate Dos</h3>
+                    <p>Supervisor</p>
+                </div>
+
+                <div class="team-img">
+                    <img src="public/img/team01.png" alt="">
+                </div>
+
+            </div>
+
+            
+            <div class="team-card">
+
+                <div class="team-header">
+                    <h3>Colgate Dos</h3>
+                    <p>Supervisor</p>
+                </div>
+
+                <div class="team-img">
+                    <img src="public/img/team01.png" alt="">
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
+    
+        <section class="contact-us">
+
+            <div class="contact-header">
+                <h1>Contact us now</h1>
+            </div>
+            <section class="about-company contact-abt">
+                <article class="about-info">
+                    <div class="contact-text">
+                        <h3>Call us Today!</h3>
+                        <h1>(777) 123 4567 <span>Call Us 24 Hours / 7 Days</span></h1>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, labore exercitationem! Libero ullam, maxime molestiae excepturi consectetur aliquid, quo ea iusto architecto, dignissimos optio velit autem nihil. Ullam, qui optio?</p>
+                        <button>Contact Us</button>
+                    </div>
+                </article>
+                <div class="img-company contact-img">
+                    <div class="border-line">
+                    </div>
+                </div>
+        </section>
+    </section>
+
+    <footer class="footer">
+        <p>©Copyright 2023 KMT. All Rights Reserved.
+        </p>
+        <a href="https://www.digitalbitsolutions.com">Desarrollado por: <span>DigitalBitSolutions</span></a>
+    </footer>
 
 </html>
