--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 
-    <header class="header">
+    <header class="header" id="header">
 
         <nav class="navbar-desktop">
             <div class="logo">
@@ -56,7 +56,7 @@
 
     <main class="slider">
         <div class="slider-text">
-            <h1>Best House Renovation</h1>
+            <h1>Best House <span>Renovation</span></h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, voluptas repudiandae. Sequi ratione doloremque quae illo pariatur dolores eligendi sunt.</p>
             <button>Contact Us</button>
         </div>
@@ -103,7 +103,7 @@
     <section class="services">
 
         <div class="services-header">
-            <h1>Our Services</h1>
+            <h1>Our <span>Services</span></h1>
         </div>
 
         <section class="our-services">
@@ -143,11 +143,14 @@
 
     <section class="latest-project">
         <header class="latest-header">
-            <h1>LATEST PROJECT</h1>
+            <h1>LATEST <span>PROJECT</span></h1>
         </header>
         <article class="latest-grid-1">
-            <div class="latest-img">
-                <img src="public/img/slider/home.webp" alt="">
+
+            <div class="latest-hover">
+                <div class="latest-img">
+                    <img src="public/img/slider/home.webp" alt="">
+                </div>
             </div>
     
             <div class="latest-img">
@@ -211,7 +214,7 @@
     <section class="our-team">
 
         <header class="our-header">
-            <h1>Our Experts</h1>
+            <h1>Our <span>Experts</span></h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit a omnis officia. Voluptas, tempora optio.</p>
         </header>
 
@@ -278,13 +281,13 @@
         <section class="contact-us">
 
             <div class="contact-header">
-                <h1>Contact us now</h1>
+                <h1>Contact <span>us now</span></h1>
             </div>
             <section class="about-company contact-abt">
                 <article class="about-info">
                     <div class="contact-text">
                         <h3>Call us Today!</h3>
-                        <h1>(777) 123 4567 <span>Call Us 24 Hours / 7 Days</span></h1>
+                        <h2>(777) 123 4567 <span>Call Us 24 Hours / 7 Days</span></h2>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, labore exercitationem! Libero ullam, maxime molestiae excepturi consectetur aliquid, quo ea iusto architecto, dignissimos optio velit autem nihil. Ullam, qui optio?</p>
                         <button>Contact Us</button>
                     </div>
@@ -297,7 +300,7 @@
     </section>
 
     <footer class="footer">
-        <p>©Copyright 2023 KMT. All Rights Reserved.
+        <p>©Copyright 2023 <span>KMT</span>. All Rights Reserved.
         </p>
         <a href="https://www.digitalbitsolutions.com">Desarrollado por: <span>DigitalBitSolutions</span></a>
     </footer>
